camelcase to hyphen css

--- a/stripes.css
+++ b/stripes.css
@@ -168,7 +168,7 @@
 			/*height: 550px;*/
 			text-align: left;
 		}	
-	.fiveColumn {
+	.five-column {
 		float: left;
 		width: 20%;
 		margin-right: 0;
